objects/ID_Card_Requirements__c.object
<CustomObject>
    <fields>
        <fullName>Alt_Network__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alt Network</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attn__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attn:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Ins__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Co-Ins</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracting_State_Tag_LE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contracting State (Tag/LE)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_While_Traveling__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coverage While Traveling</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Phone_Number_Other_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Service Phone Number Other 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Phone_Number_Other_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Service Phone Number Other 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Phone_Number_Other_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Service Phone Number Other 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deductible</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Claim_Filing_Address_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Claim Filing Address City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Claim_Filing_Address_State__c</fullName>
        <label>Dental Claim Filing Address State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Claim_Filing_Address_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Claim Filing Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Claim_Filing_Address_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DentalClaim Filing Address Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Services__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Services</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Room__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Emergency Room</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envoy_Payer_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Envoy Payer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gen_C_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Gen C Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Record_ID__c</fullName>
        <formula>CASESAFEID(ID_Cards__r.Implementation_Tracking_ID__r.Group_Number__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Cost_Share_Details_Other_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Cost Share Details Other 10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Cost_Share_Details_Other_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Cost Share Details Other 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Cost_Share_Details_Other_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Cost Share Details Other 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Cards__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ID Cards</label>
        <referenceTo>ID_Cards__c</referenceTo>
        <relationshipLabel>ID Card Requirements</relationshipLabel>
        <relationshipName>ID_Card_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_card_Approved_Date__c</fullName>
        <description>Used for OS query</description>
        <formula>ID_Cards__r.ID_card_Approved_Date__c</formula>
        <label>ID card Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_ID__c</fullName>
        <formula>ID_Cards__r.Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inpatient_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inpatient Care</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Coverage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International Coverage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dental_Product_Needed_On_Card__c</fullName>
        <label>Is Dental Product Needed On Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Pharmacy_Product_Needed_On_Card__c</fullName>
        <label>Is Pharmacy Product Needed On Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Vision_Product_Needed_On_Card__c</fullName>
        <label>Is Vision Product Needed On Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Services__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Services</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office_Visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Office Visit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_please_specify__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Group_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package/Group Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Group_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List multiple entries with a semicolon delimeter</inlineHelpText>
        <label>Package/Group Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pharmacists_Questions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacists Questions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Group Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Logo__c</fullName>
        <label>Pharmacy Logo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharmacy_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Authorization__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre-Authorization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefix</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preventive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preventive</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Services__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Services</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialist</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suggestion_Category__c</fullName>
        <label>Suggestion Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TDD_TYY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TDD / TYY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Urgent Care</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Claim_Filing_Address_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Claim Filing Address City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Claim_Filing_Address_State__c</fullName>
        <label>Vision Claim Filing Address State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Claim_Filing_Address_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Claim Filing Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Claim_Filing_Address_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Claim Filing Address Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Services__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Services</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X24_7_Nureseline__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>24/7 Nureseline</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ID Card Requirements</label>
    <listViews>
        <fullName>ID_Cards_Local_ID_Card_Requirements</fullName>
        <filterScope>Queue</filterScope>
        <label>ID Cards - Local</label>
        <queue>ID_Cards_Local</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IDCARDREQ-{000}</displayFormat>
        <label>ID Cards Requirements ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Card Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ANA_VR_ICR01_Do_Not_Update_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidation__c , ID_Cards__r.Field_Update__c = TRUE)</errorConditionFormula>
        <errorDisplayField>X24_7_Nureseline__c</errorDisplayField>
        <errorMessage>The ID Card Requirements cannot be edited when submitted for approval</errorMessage>
    </validationRules>
</CustomObject>